@@ -44,7 +44,7 @@ import org.gjt.sp.util.Log;
 /**
  * The main class of the VFS browser.
  * @author Slava Pestov
- * @version $Id: VFSBrowser.java,v 1.26 2002/01/16 09:21:51 spestov Exp $
+ * @version $Id: VFSBrowser.java,v 1.27 2002/01/26 01:36:24 spestov Exp $
  */
 public class VFSBrowser extends JPanel implements EBComponent
 {
@@ -693,8 +693,11 @@ public class VFSBrowser extends JPanel implements EBComponent
 	} //}}}
 
 	//{{{ directoryLoaded() method
-	void directoryLoaded(final String path, final VFS.DirectoryEntry[] list)
+	void directoryLoaded(final String path,
+		final String canonPath,
+		final VFS.DirectoryEntry[] list)
 	{
+		System.err.println("dl: " + path + "::" + canonPath);
 		SwingUtilities.invokeLater(new Runnable()
 		{
 			public void run()
@@ -702,9 +705,9 @@ public class VFSBrowser extends JPanel implements EBComponent
 				if(loadingRoot)
 				{
 					// This is the new, canonical path
-					VFSBrowser.this.path = path;
-					if(!pathField.getText().equals(path))
-						pathField.setText(path);
+					VFSBrowser.this.path = canonPath;
+					if(!pathField.getText().equals(canonPath))
+						pathField.setText(canonPath);
 					pathField.addCurrentToHistory();
 				}
 
@@ -751,7 +754,8 @@ public class VFSBrowser extends JPanel implements EBComponent
 					}
 				}
 
-				browserView.directoryLoaded(path,directoryVector);
+				browserView.directoryLoaded(path,canonPath,
+					directoryVector);
 			}
 		});
 	} //}}}
